--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Brunch</title>
+  <meta name="description"
+        content="Henri Huuskonen - A software developer from Finland. Interested in all things tech.">
   <link rel="stylesheet" href="/app.css">
   <script src="/vendor.js"></script>
   <script src="/app.js"></script>
