Fix title and css

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Brunch</title>
+  <title>Henri Huuskonen</title>
   <meta name="description"
         content="Henri Huuskonen - A software developer from Finland. Interested in all things tech.">
   <link rel="stylesheet" href="/app.css">
